# stz2-new

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.issues/0001/: index.md
.issues/0002/: index.md
.issues/0003/: index.md
.issues/0004/: index.md
cmake/: schema.json  stz2.pc.in  stz2Config.cmake
docs/: stz2.md
gameboy/: CMakeLists.txt
gameboy/list_devices/: game_list_devices.c
include/stz2/: args.h  cmd.h  db.h  parse.h  path.h  pathlib.h  table.h  test.h  types.h
include/stz2/gui/: SDL_FontCache.h  assets.h  draw.h  types.h
include/stz2/gui/widgets/: listview.h
include/stz2/json/: types.h
include/stz2/md/: toc.h
include/stz2/rt/: atomic.h  cache.h  ring.h  strset.h
include/stz2/web/: registry.h  server.h
src/: args.c  cmd.c  db.c  path.c  pathlib.c  types.c
src/gui/: SDL_FontCache.c  draw.c  types.c
src/md/: toc.c
src/rt/: atomic.c  ring.c
src/web/: registry.c  server.c
tests/: CMakeLists.txt  test_args.c  test_array.c  test_buf.c  test_cmd.c  test_db.c  test_gui_listview.c  test_gui_window.c  test_md_toc.c  test_parse.c  test_path.c  test_pathlib.c  test_print.c  test_range.c  test_rt_atomic.c  test_rt_cache.c  test_rt_ring.c  test_str.c  test_web_registry.c
